[package]
name = "lamp-with-mind"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
embedded-graphics = "0.8.0"

[target.'cfg(target_arch="arm")'.dependencies]
cortex-m = { version = "0.7.2", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
cortex-m-rtic = "1.1.4"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
# Used to load BMP images in various examples
tinybmp = "0.5.0"
# Used by the noise_i2c examples
embassy-embedded-hal = { version = "0.2.0", default-features=false }
embassy-executor = { version = "0.7.0", git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [ "stm32f103c8", "memory-x", "defmt", "exti", "time-driver-tim3" , "unstable-pac"]  }
embassy-time = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy" }
embassy-futures = "0.1.1"
embedded-hal-bus = { version = "0.2.0", features = ["async"]}
embedded-hal-async = { version = "1.0.0",  optional = true }
heapless = { version = "0.8.0" }
ssd1306 = {version = "0.9.0", features = ["async"]}
libm = "0.2.11"

[profile.dev]
opt-level = "s"
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
debug = 0
lto =  true
opt-level = "z"
panic = "abort"

# Optimize all dependencies
[profile.release.package."*"]
opt-level = "z"
